Annual ozone calculations. Part 1.

--- a/connect.ini
+++ b/connect.ini
@@ -1,25 +1,25 @@
-# Адрес для отправки файлов через socket
-# Если отправка не требуется
+# РђРґСЂРµСЃ РґР»СЏ РѕС‚РїСЂР°РІРєРё С„Р°Р№Р»РѕРІ С‡РµСЂРµР· socket
+# Р•СЃР»Рё РѕС‚РїСЂР°РІРєР° РЅРµ С‚СЂРµР±СѓРµС‚СЃСЏ
 # socket_ip = 0
 socket_ip = 185.88.157.2
 
-# Порт для отправки файлов через socket
+# РџРѕСЂС‚ РґР»СЏ РѕС‚РїСЂР°РІРєРё С„Р°Р№Р»РѕРІ С‡РµСЂРµР· socket
 socket_port = 20000
 
-# Адрес для отправки файлов через FTP
-# ftp_ip = 0 - если отправка не требуется
+# РђРґСЂРµСЃ РґР»СЏ РѕС‚РїСЂР°РІРєРё С„Р°Р№Р»РѕРІ С‡РµСЂРµР· FTP
+# ftp_ip = 0 - РµСЃР»Рё РѕС‚РїСЂР°РІРєР° РЅРµ С‚СЂРµР±СѓРµС‚СЃСЏ
 ftp_ip = 0
 
-# Порт для отправки файлов через FTP
+# РџРѕСЂС‚ РґР»СЏ РѕС‚РїСЂР°РІРєРё С„Р°Р№Р»РѕРІ С‡РµСЂРµР· FTP
 ftp_port = 21
 
-# ftp пользователь
+# ftp РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ
 ftp_user = test
 
-# ftp пароль
+# ftp РїР°СЂРѕР»СЊ
 ftp_pass = test
 
-# ftp удаленная директория
-# Если требуется корневая папка
+# ftp СѓРґР°Р»РµРЅРЅР°СЏ РґРёСЂРµРєС‚РѕСЂРёСЏ
+# Р•СЃР»Рё С‚СЂРµР±СѓРµС‚СЃСЏ РєРѕСЂРЅРµРІР°СЏ РїР°РїРєР°
 # ftp_path = //
 ftp_path = UFOS
