--- a/Ufos_23/Settings/settings.json
+++ b/Ufos_23/Settings/settings.json
@@ -1,118 +1,66 @@
 {
     "calibration": {
         "nm(pix)": {
-            "S": [
-                "9.6*10**-8", 
-                "0.039196277", 
-                "270.314812842"
-            ], 
-            "Z": [
-                "1.6628495*10**-7", 
-                "0.0388884", 
-                "269.39"
-            ]
-        }, 
-        "pix_interval": 25, 
+            "S": "9.6*10**-8; 0.039196277; 270.314812842",
+            "Z": "1.6628495*10**-7; 0.0388884; 269.39"
+        },
+        "pix_interval": "25",
         "points": {
-            "Fraunhofer_pair": [
-                393.37, 
-                396.78
-            ], 
-            "cloud_pair_1": [
-                332, 
-                352
-            ], 
-            "cloud_pair_2": [
-                340, 
-                360
-            ], 
-            "o3_pair_1": [
-                312, 
-                332
-            ], 
-            "o3_pair_2": [
-                317, 
-                340
-            ]
-        }, 
+            "Fraunhofer_pair": "393.37; 396.78",
+            "cloud_pair_1": "332; 352",
+            "cloud_pair_2": "340; 360",
+            "o3_pair_1": "312; 332",
+            "o3_pair_2": "317; 340"
+        },
         "polynom": {
-            "degree": 3, 
-            "mu_end": 12, 
-            "mu_intervals": [
-                3, 
-                5
-            ], 
-            "mu_start": 1, 
-            "mu_step": 0.05
-        }, 
-        "sigma_count": 2, 
-        "sko_D": 100, 
-        "sko_ZaD": 100, 
-        "uva_koef": 1, 
-        "uvb_koef": 1, 
-        "uve_koef": 1
-    }, 
+            "degree": "3",
+            "mu_end": "12",
+            "mu_intervals": "3; 5",
+            "mu_start": "1",
+            "mu_step": "0.05"
+        },
+        "sigma_count": "2",
+        "sko_D": "100",
+        "sko_ZaD": "100",
+        "uva_koef": "1",
+        "uvb_koef": "1",
+        "uve_koef": "1"
+    },
     "calibration2": {
-        "kzLarger1": [
-            1.3834, 
-            -0.1423, 
-            0.0147
-        ], 
-        "kzLess1": [
-            1.3359, 
-            -0.0783, 
-            -0.005
-        ], 
-        "kz_obl1": [
-            1.4773, 
-            -1.7878, 
-            1.3051
-        ],
-        "kzLarger2": [
-            1.3834, 
-            -0.1423, 
-            0.0147
-        ], 
-        "kzLess2": [
-            1.3359, 
-            -0.0783, 
-            -0.005
-        ], 
-        "kz_obl2": [
-            1.4773, 
-            -1.7878, 
-            1.3051
-        ], 
-        "pix+-": 2,
-        "mu_effect_1": 2,
-        "mu_effect_2": 2
-    }, 
+        "kzLarger1": "1.3834; -0.1423; 0.0147",
+        "kzLarger2": "1.3834; -0.1423; 0.0147",
+        "kzLess1": "1.3359; -0.0783; -0.005",
+        "kzLess2": "1.3359; -0.0783; -0.005",
+        "kz_obl1": "1.4773; -1.7878; 1.3051",
+        "kz_obl2": "1.4773; -1.7878; 1.3051",
+        "mu_effect_1": "2",
+        "mu_effect_2": "2",
+        "pix+-": "2"
+    },
     "channel_names": {
-        "D": "D", 
-        "S": "S", 
+        "D": "D",
+        "S": "S",
         "Z": "Z"
-    }, 
+    },
     "device": {
-        "accummulate": 1, 
-        "amplitude_max": 3700, 
-        "amplitude_min": 3500, 
-        "auto_expo_max": 4000, 
-        "auto_expo_min": 50, 
-        "auto_exposition": 1, 
-        "channel": "ZS", 
-        "graduation_expo": 4000, 
-        "id": 23, 
-        "manual_expo": [
-            40
-        ]
-    }, 
+        "accummulate": "1",
+        "amplitude_max": "3700",
+        "amplitude_min": "3500",
+        "auto_expo_max": "4000",
+        "auto_expo_min": "50",
+        "auto_exposition": "1",
+        "channel": "ZS",
+        "graduation_expo": "4000",
+        "id": "23",
+        "manual_expo": "40"
+    },
     "station": {
-        "id": "26077", 
-        "interval": 15, 
-        "latitude": 59.57,
-        "longitude": -30.42,
-        "sun_height_min": 5, 
+        "id": "26077",
+        "interval": "15",
+        "latitude": "59.57",
+        "longitude": "-30.42",
+        "sun_height_min": "5",
         "timezone": "+3"
-    }, 
+    },
     "version": "2.0"
 }
