Fix problem with settings23

--- a/Ufos_7/Settings/settings.json
+++ b/Ufos_7/Settings/settings.json
@@ -58,7 +58,17 @@
             -0.1423,
             0.0147
         ],
+        "kzLarger2": [
+            1.3834,
+            -0.1423,
+            0.0147
+        ],
         "kzLess1": [
+            1.3359,
+            -0.0783,
+            -0.005
+        ],
+        "kzLess2": [
             1.3359,
             -0.0783,
             -0.005
@@ -68,24 +78,14 @@
             -1.7878,
             1.3051
         ],
-        "kzLarger2": [
-            1.3834,
-            -0.1423,
-            0.0147
-        ],
-        "kzLess2": [
-            1.3359,
-            -0.0783,
-            -0.005
-        ],
         "kz_obl2": [
             1.4773,
             -1.7878,
             1.3051
         ],
-        "pix+-": 2,
         "mu_effect_1": 2,
-        "mu_effect_2": 2
+        "mu_effect_2": 2,
+        "pix+-": 2
     },
     "channel_names": {
         "D": "D",
