--- a/Ufos_14/Settings/settings.json
+++ b/Ufos_14/Settings/settings.json
@@ -2,30 +2,30 @@
   "calibration": {
     "description": {
       "nm(pix)": {
-      "S": "List of coefficients to perform Semisphere pix to nm calculations",
-      "Z": "List of coefficients to perform Zenith pix to nm calculations"
-    },
-    "pix_interval": "Quantity of pixels to perform spectr interval around one pixel",
-    "points": {
-      "Fraunhofer_pair": "Fraunhofer pair of nanometers",
-      "cloud_pair_1": "First cloud pair of nanometers",
-      "cloud_pair_2": "Second cloud pair of nanometers",
-      "o3_pair_1": "First ozone pair of nanometers",
-      "o3_pair_2": "Second ozone pair of nanometers"
-    },
-    "polynom": {
-      "degree": "Polynom degree for calculations",
-      "mu_end": "Mu value to end calculations. Default 12",
-      "mu_intervals": "Mu interval conditions to use different polynoms mu=[3, 5]",
-      "mu_start": "First mu in ozone table. Default 1",
-      "mu_step": "Mu step to make table of ozone by polynom"
-    },
-    "sigma_count": "Standard Square Deviation Sigma quantity for correct ozone calculations",
-    "sko_D": "Standard Square Deviation of Dark spectr",
-    "sko_ZaD": "Standard Square Deviation of ZD or SD spectr",
-    "uva_koef": "Hard coefficient for uva value print",
-    "uvb_koef": "Hard coefficient for uvb value print",
-    "uve_koef": "Hard coefficient for uve value print"
+        "S": "List of coefficients to perform Semisphere pix to nm calculations",
+        "Z": "List of coefficients to perform Zenith pix to nm calculations"
+      },
+      "pix_interval": "Quantity of pixels to perform spectr interval around one pixel",
+      "points": {
+        "Fraunhofer_pair": "Fraunhofer pair of nanometers",
+        "cloud_pair_1": "First cloud pair of nanometers",
+        "cloud_pair_2": "Second cloud pair of nanometers",
+        "o3_pair_1": "First ozone pair of nanometers",
+        "o3_pair_2": "Second ozone pair of nanometers"
+      },
+      "polynom": {
+        "degree": "Polynom degree for calculations",
+        "mu_end": "Mu value to end calculations. Default 12",
+        "mu_intervals": "Mu interval conditions to use different polynoms mu=[3, 5]",
+        "mu_start": "First mu in ozone table. Default 1",
+        "mu_step": "Mu step to make table of ozone by polynom"
+      },
+      "sigma_count": "Standard Square Deviation Sigma quantity for correct ozone calculations",
+      "sko_D": "Standard Square Deviation of Dark spectr",
+      "sko_ZaD": "Standard Square Deviation of ZD or SD spectr",
+      "uva_koef": "Hard coefficient for uva value print",
+      "uvb_koef": "Hard coefficient for uvb value print",
+      "uve_koef": "Hard coefficient for uve value print"
     },
     "nm(pix)": {
       "S": [
@@ -82,60 +82,67 @@
   "calibration2": {
     "description": {
       "kzLarger1": "List of coefficients. Can be unlimited",
-      "kzLess1": "List of coefficients. Can be unlimited",
-      "kz_obl1": "List of coefficients. Can be unlimited",
       "kzLarger2": "List of coefficients. Can be unlimited",
+      "kzLess1": "List of coefficients. Can be unlimited",
       "kzLess2": "List of coefficients. Can be unlimited",
+      "kz_obl1": "List of coefficients. Can be unlimited",
       "kz_obl2": "List of coefficients. Can be unlimited",
-      "pix+-": "Quantity of pixels to perform spectr interval around one pixel (left and right)",
       "mu_effect_1": "...",
-      "mu_effect_2": "..."
+      "mu_effect_2": "...",
+      "pix+-": "Quantity of pixels to perform spectr interval around one pixel (left and right)"
     },
     "kzLarger1": [
       1.22252,
       -0.10069,
       0.0087
     ],
+    "kzLarger2": [
+      1.30802,
+      -0.13524,
+      0.01315
+    ],
     "kzLess1": [
       1.1057,
       0.0631,
       -0.0439
+    ],
+    "kzLess2": [
+      0.9856,
+      0.245,
+      -0.09598
     ],
     "kz_obl1": [
       -2.9911,
       6.3662,
       -2.3918
     ],
-    "kzLarger2": [
-      1.30802,
-      -0.13524,
-      0.01315
-    ],
-    "kzLess2": [
-      0.98560,
-      0.24500,
-      -0.09598
-    ],
     "kz_obl2": [
       -3.1193,
       6.2871,
       -2.2256
     ],
-    "pix+-": 2,
     "mu_effect_1": 2,
-    "mu_effect_2": 2
+    "mu_effect_2": 2,
+    "pix+-": 2
   },
   "channel_names": {
+    "D": "D",
+    "S": "S",
+    "Z": "Z",
     "description": {
       "D": "Name of Dark channel to print in console",
       "S": "Name of Semisphere channel to print in console",
       "Z": "Name of Zenith channel to print in console"
-    },
-    "D": "D",
-    "S": "S",
-    "Z": "Z"
+    }
   },
   "device": {
+    "accummulate": 1,
+    "amplitude_max": 2800,
+    "amplitude_min": 2600,
+    "auto_expo_max": 4000,
+    "auto_expo_min": 50,
+    "auto_exposition": 1,
+    "channel": "ZS",
     "description": {
       "accummulate": "Quantity of measurements on UFOS to get mean spectr",
       "amplitude_max": "Maximum amplitude value of spectr which can accepted",
@@ -148,13 +155,6 @@
       "id": "Device identificator",
       "manual_expo": "auto_exposition=0. List of expositions to perform set of measurements"
     },
-    "accummulate": 1,
-    "amplitude_max": 2800,
-    "amplitude_min": 2600,
-    "auto_expo_max": 4000,
-    "auto_expo_min": 50,
-    "auto_exposition": 1,
-    "channel": "ZS",
     "graduation_expo": 4000,
     "id": 14,
     "manual_expo": [
