--- a/Ufos_23/Settings/settings.json
+++ b/Ufos_23/Settings/settings.json
@@ -90,8 +90,8 @@
       "mu_effect_1": "...",
       "mu_effect_2": "...",
       "pix+-": "Quantity of pixels to perform spectr interval around one pixel (left and right)",
-      "visible_sunheight_min": "Minimum sun height of data to show on chart and to be used in daily mean calculation",
-      "visible_sunheight_max": "Maximum sun height of data to show on chart and to be used in daily mean calculation"
+      "visible_sunheight_max": "Maximum sun height of data to show on chart and to be used in daily mean calculation",
+      "visible_sunheight_min": "Minimum sun height of data to show on chart and to be used in daily mean calculation"
     },
     "kzLarger1": [
       1.3834,
