--- a/defaults/settings.json
+++ b/defaults/settings.json
@@ -90,8 +90,9 @@
       "pix+-": "Quantity of pixels to perform spectr interval around one pixel (left and right)",
       "mu_effect_1": "...",
       "mu_effect_2": "...",
-      "visible_sunheight_min": "Minimum sun height of data to show on chart and to be used in daily mean calculation",
-      "visible_sunheight_max": "Maximum sun height of data to show on chart and to be used in daily mean calculation"
+      "visible_sunheight_max": "Maximum sun height of data to show on chart and to be used in daily mean calculation",
+      "visible_sunheight_min": "Minimum sun height of data to show on chart and to be used in daily mean calculation"
+
     },
     "kzLarger1": [
       1.22252,
